--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4280,7 +4280,7 @@ input[type=button].btn-block {
 .navbar-light .navbar-nav .active > .nav-link,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
-  color: rgba(0, 0, 0, 0.9);
+  color: blue;
 }
 .navbar-light .navbar-toggler {
   color: rgba(0, 0, 0, 0.5);
